syntax = "proto3";

package tweetDigest;

option csharp_namespace = "TweetDigest.Grpc";

service TweetService {
  rpc GetDailyDigest (DigestRequest) returns (DigestResponse);
}

message DigestRequest {
  string from = 1;
  string to = 2;
}

message DigestItem {
  string tweetId = 1;
  string author = 2;
  string content = 3;
  string createdAt = 4;
  string modifiedAt = 5;
}

message DigestResponse {
  repeated DigestItem items = 1;
}
